correct lcoation blurbs and justify left on mobile, disable scroll when hamburger menu is open

--- a/src/styles/Location.css
+++ b/src/styles/Location.css
@@ -53,8 +53,8 @@
     }
 
     .location .imgContainer {
-        width: 300px;
-        height: 300px;
+        width: 250px;
+        height: 250px;
     }
 
     .locationInfo {
@@ -71,6 +71,11 @@
 @media (min-width: 768px) and (max-width: 1000px) {
     .location .wrapper{
         grid-template-columns: 30% 70%;
+    }
+
+    .locationInfo p {
+        line-height: 1.25rem;
+        text-align: left;
     }
 
     .locationInfo button {
